2006-01-17  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Generate PPD files correctly where an
	  enumerated-choice option has "0" as default (thanks to Tim
	  Waugh from Red Hat for the patch).

	* foomatic-cleanupdrivers.in: Do not try to delete the "." file in
	  the driver-XML-file directory (thanks to Tim Waugh from Red Hat
	  for the patch).

2006-01-09  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Let PPD files with "*CloseGroup" without
	  group name being parsed correctly, eliminate warning about
	  uninitialized variable when a PPD file is built out of Foomatic
	  data.

2006-01-06  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, configure.ac: Renamed configure.in to
	  configure.ac, to make the package working with the current
	  versions of aclocal and autoconf.

	* foomatic-cleanupdrivers.in: Delete also driver XML files
	  without "<prototype>" tags at all, as they also do not
	  contain a driver command line prototype.

2005-10-26  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fix on support for gzipped PPDs.

2005-10-25  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Added support for gzipping the custom
	  PPD files without needing to adapt the links in the printer
	  XML files.

2005-10-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c, foomatic-configure.in,
	  foomatic-ppdfile.in, foomatic-compiledb.in, lib/Foomatic/DB.pm:
	  Let the Foomatic tools use custom-made PPD files if they are
	  linked in the printer XML file and available in the local
	  Foomatic database.

2005-09-13  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Made "translate_printer_id()" not crashing
	  when it is called with a weird printer ID.

2005-08-23  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-combo-xml.c: Added the links to the ready-made PPD
	  files for all drivers to the overview output. Eliminated
	  compiler warnings.
